added GNU MP entries to .hgignore.
--HG--
extra : convert_revision : 519134034877322c4fe1961f1b37430a8a3adfbd

--- a/.hgignore
+++ b/.hgignore
@@ -16,6 +16,58 @@ config.h
 config.log
 config.status
 core
+gmp/gen-fib
+gmp/gen-psqr
+gmp/gmp.h
+gmp/mp.h
+gmp/mpn/binvert.c
+gmp/mpn/cmp.c
+gmp/mpn/dc_bdiv_q.c
+gmp/mpn/dc_bdiv_qr.c
+gmp/mpn/dc_div_q.c
+gmp/mpn/dc_div_qr.c
+gmp/mpn/dc_divrem_n.c
+gmp/mpn/diveby3.c
+gmp/mpn/divis.c
+gmp/mpn/divrem.c
+gmp/mpn/dump.c
+gmp/mpn/fib2_ui.c
+gmp/mpn/gcd.c
+gmp/mpn/gcd_1.c
+gmp/mpn/gcd_lehmer.c
+gmp/mpn/gcd_subdiv_step.c
+gmp/mpn/gcdext.c
+gmp/mpn/gcdext_1.c
+gmp/mpn/gcdext_lehmer.c
+gmp/mpn/gcdext_subdiv_step.c
+gmp/mpn/get_d.c
+gmp/mpn/get_str.c
+gmp/mpn/hgcd.c
+gmp/mpn/hgcd2.c
+gmp/mpn/invert.c
+gmp/mpn/mu_bdiv_q.c
+gmp/mpn/mu_bdiv_qr.c
+gmp/mpn/mu_div_q.c
+gmp/mpn/mu_div_qr.c
+gmp/mpn/mul.c
+gmp/mpn/mul_fft.c
+gmp/mpn/mul_n.c
+gmp/mpn/neg_n.c
+gmp/mpn/perfsqr.c
+gmp/mpn/perfsqr.h
+gmp/mpn/redc_1.c
+gmp/mpn/redc_2.c
+gmp/mpn/sb_bdiv_q.c
+gmp/mpn/sb_bdiv_qr.c
+gmp/mpn/sb_div_q.c
+gmp/mpn/sb_div_qr.c
+gmp/mpn/sb_divrem_mn.c
+gmp/mpn/set_str.c
+gmp/mpn/sqrtrem.c
+gmp/mpn/sub.c
+gmp/mpn/sub_1.c
+gmp/mpn/subcnd_n.c
+gmp/mpn/tdiv_qr.c
 onig/libtool
 onig/onig-config
 onig/sample/.libs
