added dependencies to tests/Makefile for tests/*.so. closes 64.
--HG--
extra : convert_revision : fc81c8eb0a99bf5d21113b4da83a5dd9b830bb8c

--- a/tests/Makefile.in
+++ b/tests/Makefile.in
@@ -2,10 +2,10 @@
 LIBS = test_package4.so test_package5.so
 LIBS_OPT = -shared -O2 -I../include -Wall
 
-test_package4.so: test_package4.c
+test_package4.so: test_package4.c Makefile
 	$(CC) -o $@ $(LIBS_OPT) $<
 
-test_package5.so: test_package5.c
+test_package5.so: test_package5.c Makefile
 	$(CC) -o $@ $(LIBS_OPT) $<
 
 TEST_CMD = py.test --showlocals
