--- a/tests/Makefile.in
+++ b/tests/Makefile.in
@@ -1,11 +1,14 @@
 
-LIBS = test_package4.so test_package5.so
+LIBS = test_package4.so test_package5.so test_package6.so
 LIBS_OPT = -shared -O2 -I../include -Wall
 
 test_package4.so: test_package4.c Makefile
 	$(CC) -o $@ $(LIBS_OPT) $<
 
 test_package5.so: test_package5.c Makefile
+	$(CC) -o $@ $(LIBS_OPT) $<
+
+test_package6.so: test_package6.c Makefile
 	$(CC) -o $@ $(LIBS_OPT) $<
 
 TEST_CMD = py.test --showlocals
