changed to search packages in prefix directory. closes 39.
--HG--
extra : convert_revision : 1e9f9810ec8e21dc1b5f872447a362b7157313b6

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -396,7 +396,7 @@ COMMON_SOURCES = arg.c \
 	vm.c
 
 CFLAGS_COMMON = -I$(ROOT_DIR)/include -I$(ONIG_DIR) -I$(BDWGC_DIR)/include \
-		-I$(GMP_DIR) -Wall
+		-I$(GMP_DIR) -Wall -DPREFIX=\"$(prefix)\"
 
 LDFLAGS_COMMON = $(ONIG_DIR)/.libs/libonig.a -ldl -export-dynamic \
 		 $(GMP_DIR)/.libs/libgmp.a
