--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -61,11 +61,11 @@ am__objects_1 = yog_bdw-arg.$(OBJEXT) yog_bdw-array.$(OBJEXT) \
 	yog_bdw-lexer.$(OBJEXT) yog_bdw-main.$(OBJEXT) \
 	yog_bdw-nil.$(OBJEXT) yog_bdw-object.$(OBJEXT) \
 	yog_bdw-package.$(OBJEXT) yog_bdw-parser.$(OBJEXT) \
-	yog_bdw-regexp.$(OBJEXT) yog_bdw-repl.$(OBJEXT) \
-	yog_bdw-stacktrace.$(OBJEXT) yog_bdw-string.$(OBJEXT) \
-	yog_bdw-symbol.$(OBJEXT) yog_bdw-table.$(OBJEXT) \
-	yog_bdw-thread.$(OBJEXT) yog_bdw-value.$(OBJEXT) \
-	yog_bdw-vm.$(OBJEXT)
+	yog_bdw-property.$(OBJEXT) yog_bdw-regexp.$(OBJEXT) \
+	yog_bdw-repl.$(OBJEXT) yog_bdw-stacktrace.$(OBJEXT) \
+	yog_bdw-string.$(OBJEXT) yog_bdw-symbol.$(OBJEXT) \
+	yog_bdw-table.$(OBJEXT) yog_bdw-thread.$(OBJEXT) \
+	yog_bdw-value.$(OBJEXT) yog_bdw-vm.$(OBJEXT)
 am_yog_bdw_OBJECTS = $(am__objects_1) yog_bdw-bdw.$(OBJEXT)
 yog_bdw_OBJECTS = $(am_yog_bdw_OBJECTS)
 yog_bdw_LDADD = $(LDADD)
@@ -85,11 +85,11 @@ am__objects_2 = yog_copying-arg.$(OBJEXT) yog_copying-array.$(OBJEXT) \
 	yog_copying-lexer.$(OBJEXT) yog_copying-main.$(OBJEXT) \
 	yog_copying-nil.$(OBJEXT) yog_copying-object.$(OBJEXT) \
 	yog_copying-package.$(OBJEXT) yog_copying-parser.$(OBJEXT) \
-	yog_copying-regexp.$(OBJEXT) yog_copying-repl.$(OBJEXT) \
-	yog_copying-stacktrace.$(OBJEXT) yog_copying-string.$(OBJEXT) \
-	yog_copying-symbol.$(OBJEXT) yog_copying-table.$(OBJEXT) \
-	yog_copying-thread.$(OBJEXT) yog_copying-value.$(OBJEXT) \
-	yog_copying-vm.$(OBJEXT)
+	yog_copying-property.$(OBJEXT) yog_copying-regexp.$(OBJEXT) \
+	yog_copying-repl.$(OBJEXT) yog_copying-stacktrace.$(OBJEXT) \
+	yog_copying-string.$(OBJEXT) yog_copying-symbol.$(OBJEXT) \
+	yog_copying-table.$(OBJEXT) yog_copying-thread.$(OBJEXT) \
+	yog_copying-value.$(OBJEXT) yog_copying-vm.$(OBJEXT)
 am_yog_copying_OBJECTS = $(am__objects_2) \
 	yog_copying-copying.$(OBJEXT)
 yog_copying_OBJECTS = $(am_yog_copying_OBJECTS)
@@ -121,6 +121,7 @@ am__objects_3 = yog_generational-arg.$(OBJEXT) \
 	yog_generational-object.$(OBJEXT) \
 	yog_generational-package.$(OBJEXT) \
 	yog_generational-parser.$(OBJEXT) \
+	yog_generational-property.$(OBJEXT) \
 	yog_generational-regexp.$(OBJEXT) \
 	yog_generational-repl.$(OBJEXT) \
 	yog_generational-stacktrace.$(OBJEXT) \
@@ -158,6 +159,7 @@ am__objects_4 = yog_mark_sweep-arg.$(OBJEXT) \
 	yog_mark_sweep-nil.$(OBJEXT) yog_mark_sweep-object.$(OBJEXT) \
 	yog_mark_sweep-package.$(OBJEXT) \
 	yog_mark_sweep-parser.$(OBJEXT) \
+	yog_mark_sweep-property.$(OBJEXT) \
 	yog_mark_sweep-regexp.$(OBJEXT) yog_mark_sweep-repl.$(OBJEXT) \
 	yog_mark_sweep-stacktrace.$(OBJEXT) \
 	yog_mark_sweep-string.$(OBJEXT) \
@@ -197,6 +199,7 @@ am__objects_5 = yog_mark_sweep_compact-arg.$(OBJEXT) \
 	yog_mark_sweep_compact-object.$(OBJEXT) \
 	yog_mark_sweep_compact-package.$(OBJEXT) \
 	yog_mark_sweep_compact-parser.$(OBJEXT) \
+	yog_mark_sweep_compact-property.$(OBJEXT) \
 	yog_mark_sweep_compact-regexp.$(OBJEXT) \
 	yog_mark_sweep_compact-repl.$(OBJEXT) \
 	yog_mark_sweep_compact-stacktrace.$(OBJEXT) \
@@ -385,6 +388,7 @@ COMMON_SOURCES = arg.c \
 	object.c \
 	package.c \
 	parser.y \
+	property.c \
 	regexp.c \
 	repl.c \
 	stacktrace.c \
@@ -546,6 +550,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_bdw-object.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_bdw-package.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_bdw-parser.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_bdw-property.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_bdw-regexp.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_bdw-repl.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_bdw-stacktrace.Po@am__quote@
@@ -582,6 +587,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_copying-object.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_copying-package.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_copying-parser.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_copying-property.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_copying-regexp.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_copying-repl.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_copying-stacktrace.Po@am__quote@
@@ -620,6 +626,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_generational-object.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_generational-package.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_generational-parser.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_generational-property.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_generational-regexp.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_generational-repl.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_generational-stacktrace.Po@am__quote@
@@ -656,6 +663,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_mark_sweep-object.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_mark_sweep-package.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_mark_sweep-parser.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_mark_sweep-property.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_mark_sweep-regexp.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_mark_sweep-repl.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_mark_sweep-stacktrace.Po@am__quote@
@@ -692,6 +700,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_mark_sweep_compact-object.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_mark_sweep_compact-package.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_mark_sweep_compact-parser.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_mark_sweep_compact-property.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_mark_sweep_compact-regexp.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_mark_sweep_compact-repl.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/yog_mark_sweep_compact-stacktrace.Po@am__quote@
@@ -1086,6 +1095,20 @@ yog_bdw-parser.obj: parser.c
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	source='parser.c' object='yog_bdw-parser.obj' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_bdw_CFLAGS) $(CFLAGS) -c -o yog_bdw-parser.obj `if test -f 'parser.c'; then $(CYGPATH_W) 'parser.c'; else $(CYGPATH_W) '$(srcdir)/parser.c'; fi`
+
+yog_bdw-property.o: property.c
+@am__fastdepCC_TRUE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_bdw_CFLAGS) $(CFLAGS) -MT yog_bdw-property.o -MD -MP -MF $(DEPDIR)/yog_bdw-property.Tpo -c -o yog_bdw-property.o `test -f 'property.c' || echo '$(srcdir)/'`property.c
+@am__fastdepCC_TRUE@	mv -f $(DEPDIR)/yog_bdw-property.Tpo $(DEPDIR)/yog_bdw-property.Po
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='property.c' object='yog_bdw-property.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_bdw_CFLAGS) $(CFLAGS) -c -o yog_bdw-property.o `test -f 'property.c' || echo '$(srcdir)/'`property.c
+
+yog_bdw-property.obj: property.c
+@am__fastdepCC_TRUE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_bdw_CFLAGS) $(CFLAGS) -MT yog_bdw-property.obj -MD -MP -MF $(DEPDIR)/yog_bdw-property.Tpo -c -o yog_bdw-property.obj `if test -f 'property.c'; then $(CYGPATH_W) 'property.c'; else $(CYGPATH_W) '$(srcdir)/property.c'; fi`
+@am__fastdepCC_TRUE@	mv -f $(DEPDIR)/yog_bdw-property.Tpo $(DEPDIR)/yog_bdw-property.Po
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='property.c' object='yog_bdw-property.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_bdw_CFLAGS) $(CFLAGS) -c -o yog_bdw-property.obj `if test -f 'property.c'; then $(CYGPATH_W) 'property.c'; else $(CYGPATH_W) '$(srcdir)/property.c'; fi`
 
 yog_bdw-regexp.o: regexp.c
 @am__fastdepCC_TRUE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_bdw_CFLAGS) $(CFLAGS) -MT yog_bdw-regexp.o -MD -MP -MF $(DEPDIR)/yog_bdw-regexp.Tpo -c -o yog_bdw-regexp.o `test -f 'regexp.c' || echo '$(srcdir)/'`regexp.c
@@ -1591,6 +1614,20 @@ yog_copying-parser.obj: parser.c
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_copying_CFLAGS) $(CFLAGS) -c -o yog_copying-parser.obj `if test -f 'parser.c'; then $(CYGPATH_W) 'parser.c'; else $(CYGPATH_W) '$(srcdir)/parser.c'; fi`
 
+yog_copying-property.o: property.c
+@am__fastdepCC_TRUE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_copying_CFLAGS) $(CFLAGS) -MT yog_copying-property.o -MD -MP -MF $(DEPDIR)/yog_copying-property.Tpo -c -o yog_copying-property.o `test -f 'property.c' || echo '$(srcdir)/'`property.c
+@am__fastdepCC_TRUE@	mv -f $(DEPDIR)/yog_copying-property.Tpo $(DEPDIR)/yog_copying-property.Po
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='property.c' object='yog_copying-property.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_copying_CFLAGS) $(CFLAGS) -c -o yog_copying-property.o `test -f 'property.c' || echo '$(srcdir)/'`property.c
+
+yog_copying-property.obj: property.c
+@am__fastdepCC_TRUE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_copying_CFLAGS) $(CFLAGS) -MT yog_copying-property.obj -MD -MP -MF $(DEPDIR)/yog_copying-property.Tpo -c -o yog_copying-property.obj `if test -f 'property.c'; then $(CYGPATH_W) 'property.c'; else $(CYGPATH_W) '$(srcdir)/property.c'; fi`
+@am__fastdepCC_TRUE@	mv -f $(DEPDIR)/yog_copying-property.Tpo $(DEPDIR)/yog_copying-property.Po
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='property.c' object='yog_copying-property.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_copying_CFLAGS) $(CFLAGS) -c -o yog_copying-property.obj `if test -f 'property.c'; then $(CYGPATH_W) 'property.c'; else $(CYGPATH_W) '$(srcdir)/property.c'; fi`
+
 yog_copying-regexp.o: regexp.c
 @am__fastdepCC_TRUE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_copying_CFLAGS) $(CFLAGS) -MT yog_copying-regexp.o -MD -MP -MF $(DEPDIR)/yog_copying-regexp.Tpo -c -o yog_copying-regexp.o `test -f 'regexp.c' || echo '$(srcdir)/'`regexp.c
 @am__fastdepCC_TRUE@	mv -f $(DEPDIR)/yog_copying-regexp.Tpo $(DEPDIR)/yog_copying-regexp.Po
@@ -2094,6 +2131,20 @@ yog_generational-parser.obj: parser.c
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	source='parser.c' object='yog_generational-parser.obj' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_generational_CFLAGS) $(CFLAGS) -c -o yog_generational-parser.obj `if test -f 'parser.c'; then $(CYGPATH_W) 'parser.c'; else $(CYGPATH_W) '$(srcdir)/parser.c'; fi`
+
+yog_generational-property.o: property.c
+@am__fastdepCC_TRUE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_generational_CFLAGS) $(CFLAGS) -MT yog_generational-property.o -MD -MP -MF $(DEPDIR)/yog_generational-property.Tpo -c -o yog_generational-property.o `test -f 'property.c' || echo '$(srcdir)/'`property.c
+@am__fastdepCC_TRUE@	mv -f $(DEPDIR)/yog_generational-property.Tpo $(DEPDIR)/yog_generational-property.Po
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='property.c' object='yog_generational-property.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_generational_CFLAGS) $(CFLAGS) -c -o yog_generational-property.o `test -f 'property.c' || echo '$(srcdir)/'`property.c
+
+yog_generational-property.obj: property.c
+@am__fastdepCC_TRUE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_generational_CFLAGS) $(CFLAGS) -MT yog_generational-property.obj -MD -MP -MF $(DEPDIR)/yog_generational-property.Tpo -c -o yog_generational-property.obj `if test -f 'property.c'; then $(CYGPATH_W) 'property.c'; else $(CYGPATH_W) '$(srcdir)/property.c'; fi`
+@am__fastdepCC_TRUE@	mv -f $(DEPDIR)/yog_generational-property.Tpo $(DEPDIR)/yog_generational-property.Po
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='property.c' object='yog_generational-property.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_generational_CFLAGS) $(CFLAGS) -c -o yog_generational-property.obj `if test -f 'property.c'; then $(CYGPATH_W) 'property.c'; else $(CYGPATH_W) '$(srcdir)/property.c'; fi`
 
 yog_generational-regexp.o: regexp.c
 @am__fastdepCC_TRUE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_generational_CFLAGS) $(CFLAGS) -MT yog_generational-regexp.o -MD -MP -MF $(DEPDIR)/yog_generational-regexp.Tpo -c -o yog_generational-regexp.o `test -f 'regexp.c' || echo '$(srcdir)/'`regexp.c
@@ -2627,6 +2678,20 @@ yog_mark_sweep-parser.obj: parser.c
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_mark_sweep_CFLAGS) $(CFLAGS) -c -o yog_mark_sweep-parser.obj `if test -f 'parser.c'; then $(CYGPATH_W) 'parser.c'; else $(CYGPATH_W) '$(srcdir)/parser.c'; fi`
 
+yog_mark_sweep-property.o: property.c
+@am__fastdepCC_TRUE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_mark_sweep_CFLAGS) $(CFLAGS) -MT yog_mark_sweep-property.o -MD -MP -MF $(DEPDIR)/yog_mark_sweep-property.Tpo -c -o yog_mark_sweep-property.o `test -f 'property.c' || echo '$(srcdir)/'`property.c
+@am__fastdepCC_TRUE@	mv -f $(DEPDIR)/yog_mark_sweep-property.Tpo $(DEPDIR)/yog_mark_sweep-property.Po
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='property.c' object='yog_mark_sweep-property.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_mark_sweep_CFLAGS) $(CFLAGS) -c -o yog_mark_sweep-property.o `test -f 'property.c' || echo '$(srcdir)/'`property.c
+
+yog_mark_sweep-property.obj: property.c
+@am__fastdepCC_TRUE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_mark_sweep_CFLAGS) $(CFLAGS) -MT yog_mark_sweep-property.obj -MD -MP -MF $(DEPDIR)/yog_mark_sweep-property.Tpo -c -o yog_mark_sweep-property.obj `if test -f 'property.c'; then $(CYGPATH_W) 'property.c'; else $(CYGPATH_W) '$(srcdir)/property.c'; fi`
+@am__fastdepCC_TRUE@	mv -f $(DEPDIR)/yog_mark_sweep-property.Tpo $(DEPDIR)/yog_mark_sweep-property.Po
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='property.c' object='yog_mark_sweep-property.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_mark_sweep_CFLAGS) $(CFLAGS) -c -o yog_mark_sweep-property.obj `if test -f 'property.c'; then $(CYGPATH_W) 'property.c'; else $(CYGPATH_W) '$(srcdir)/property.c'; fi`
+
 yog_mark_sweep-regexp.o: regexp.c
 @am__fastdepCC_TRUE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_mark_sweep_CFLAGS) $(CFLAGS) -MT yog_mark_sweep-regexp.o -MD -MP -MF $(DEPDIR)/yog_mark_sweep-regexp.Tpo -c -o yog_mark_sweep-regexp.o `test -f 'regexp.c' || echo '$(srcdir)/'`regexp.c
 @am__fastdepCC_TRUE@	mv -f $(DEPDIR)/yog_mark_sweep-regexp.Tpo $(DEPDIR)/yog_mark_sweep-regexp.Po
@@ -3130,6 +3195,20 @@ yog_mark_sweep_compact-parser.obj: parser.c
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	source='parser.c' object='yog_mark_sweep_compact-parser.obj' libtool=no @AMDEPBACKSLASH@
 @AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
 @am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_mark_sweep_compact_CFLAGS) $(CFLAGS) -c -o yog_mark_sweep_compact-parser.obj `if test -f 'parser.c'; then $(CYGPATH_W) 'parser.c'; else $(CYGPATH_W) '$(srcdir)/parser.c'; fi`
+
+yog_mark_sweep_compact-property.o: property.c
+@am__fastdepCC_TRUE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_mark_sweep_compact_CFLAGS) $(CFLAGS) -MT yog_mark_sweep_compact-property.o -MD -MP -MF $(DEPDIR)/yog_mark_sweep_compact-property.Tpo -c -o yog_mark_sweep_compact-property.o `test -f 'property.c' || echo '$(srcdir)/'`property.c
+@am__fastdepCC_TRUE@	mv -f $(DEPDIR)/yog_mark_sweep_compact-property.Tpo $(DEPDIR)/yog_mark_sweep_compact-property.Po
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='property.c' object='yog_mark_sweep_compact-property.o' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_mark_sweep_compact_CFLAGS) $(CFLAGS) -c -o yog_mark_sweep_compact-property.o `test -f 'property.c' || echo '$(srcdir)/'`property.c
+
+yog_mark_sweep_compact-property.obj: property.c
+@am__fastdepCC_TRUE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_mark_sweep_compact_CFLAGS) $(CFLAGS) -MT yog_mark_sweep_compact-property.obj -MD -MP -MF $(DEPDIR)/yog_mark_sweep_compact-property.Tpo -c -o yog_mark_sweep_compact-property.obj `if test -f 'property.c'; then $(CYGPATH_W) 'property.c'; else $(CYGPATH_W) '$(srcdir)/property.c'; fi`
+@am__fastdepCC_TRUE@	mv -f $(DEPDIR)/yog_mark_sweep_compact-property.Tpo $(DEPDIR)/yog_mark_sweep_compact-property.Po
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	source='property.c' object='yog_mark_sweep_compact-property.obj' libtool=no @AMDEPBACKSLASH@
+@AMDEP_TRUE@@am__fastdepCC_FALSE@	DEPDIR=$(DEPDIR) $(CCDEPMODE) $(depcomp) @AMDEPBACKSLASH@
+@am__fastdepCC_FALSE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_mark_sweep_compact_CFLAGS) $(CFLAGS) -c -o yog_mark_sweep_compact-property.obj `if test -f 'property.c'; then $(CYGPATH_W) 'property.c'; else $(CYGPATH_W) '$(srcdir)/property.c'; fi`
 
 yog_mark_sweep_compact-regexp.o: regexp.c
 @am__fastdepCC_TRUE@	$(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(yog_mark_sweep_compact_CFLAGS) $(CFLAGS) -MT yog_mark_sweep_compact-regexp.o -MD -MP -MF $(DEPDIR)/yog_mark_sweep_compact-regexp.Tpo -c -o yog_mark_sweep_compact-regexp.o `test -f 'regexp.c' || echo '$(srcdir)/'`regexp.c
