--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,15 @@
 *.so
 Makefile
 autom4te.cache
+bdwgc/.deps/
+bdwgc/.dirstamp
+bdwgc/.libs/
+bdwgc/bdw-gc.pc
+bdwgc/cord/.deps/
+bdwgc/cord/.dirstamp
+bdwgc/libatomic_ops-1.2/src/.deps/
+bdwgc/libatomic_ops-1.2/tests/.deps/
+bdwgc/tests/.deps/
 config.h
 config.log
 config.status
@@ -14,6 +23,168 @@ configure.log
 configure.scan
 core
 core.*
-libtool
+ext/.deps/
+gmp/.libs/
+gmp/config.m4
+gmp/demos/calc/calc-config.h
+gmp/demos/pexpr-config.h
+gmp/fib_table.h
+gmp/gen-bases
+gmp/gen-fac_ui
+gmp/gen-fib
+gmp/gen-psqr
+gmp/gmp-mparam.h
+gmp/gmp.h
+gmp/mp.h
+gmp/mp_bases.h
+gmp/mpf/.libs/
+gmp/mpn/.libs/
+gmp/mpn/add.c
+gmp/mpn/add_1.c
+gmp/mpn/add_n.asm
+gmp/mpn/addmul_1.asm
+gmp/mpn/addsub_n.c
+gmp/mpn/bdiv_dbm1c.asm
+gmp/mpn/bdivmod.c
+gmp/mpn/binvert.c
+gmp/mpn/cmp.c
+gmp/mpn/copyd.asm
+gmp/mpn/copyi.asm
+gmp/mpn/dc_bdiv_q.c
+gmp/mpn/dc_bdiv_qr.c
+gmp/mpn/dc_div_q.c
+gmp/mpn/dc_div_qr.c
+gmp/mpn/dc_divappr_q.c
+gmp/mpn/dc_divrem_n.c
+gmp/mpn/dive_1.asm
+gmp/mpn/diveby3.c
+gmp/mpn/divexact.c
+gmp/mpn/divis.c
+gmp/mpn/divrem.c
+gmp/mpn/divrem_1.asm
+gmp/mpn/divrem_2.asm
+gmp/mpn/dump.c
+gmp/mpn/fib2_ui.c
+gmp/mpn/fib_table.c
+gmp/mpn/gcd.c
+gmp/mpn/gcd_1.c
+gmp/mpn/gcd_lehmer.c
+gmp/mpn/gcd_subdiv_step.c
+gmp/mpn/gcdext.c
+gmp/mpn/gcdext_1.c
+gmp/mpn/gcdext_lehmer.c
+gmp/mpn/gcdext_subdiv_step.c
+gmp/mpn/get_d.c
+gmp/mpn/get_str.c
+gmp/mpn/hamdist.asm
+gmp/mpn/hgcd.c
+gmp/mpn/hgcd2.c
+gmp/mpn/invert.c
+gmp/mpn/jacbase.c
+gmp/mpn/lshift.asm
+gmp/mpn/matrix22_mul.c
+gmp/mpn/mod_1.asm
+gmp/mpn/mod_1_1.c
+gmp/mpn/mod_1_2.c
+gmp/mpn/mod_1_3.c
+gmp/mpn/mod_1_4.c
+gmp/mpn/mod_34lsub1.asm
+gmp/mpn/mode1o.asm
+gmp/mpn/mp_bases.c
+gmp/mpn/mu_bdiv_q.c
+gmp/mpn/mu_bdiv_qr.c
+gmp/mpn/mu_div_q.c
+gmp/mpn/mu_div_qr.c
+gmp/mpn/mu_divappr_q.c
+gmp/mpn/mul.c
+gmp/mpn/mul_1.asm
+gmp/mpn/mul_basecase.asm
+gmp/mpn/mul_fft.c
+gmp/mpn/mul_n.c
+gmp/mpn/mullow_basecase.c
+gmp/mpn/mullow_n.c
+gmp/mpn/neg_n.c
+gmp/mpn/perfsqr.c
+gmp/mpn/perfsqr.h
+gmp/mpn/popcount.asm
+gmp/mpn/pow_1.c
+gmp/mpn/powlo.c
+gmp/mpn/powm.c
+gmp/mpn/powm_sec.c
+gmp/mpn/random.c
+gmp/mpn/random2.c
+gmp/mpn/redc_1.c
+gmp/mpn/redc_2.c
+gmp/mpn/rootrem.c
+gmp/mpn/rshift.asm
+gmp/mpn/sb_bdiv_q.c
+gmp/mpn/sb_bdiv_qr.c
+gmp/mpn/sb_div_q.c
+gmp/mpn/sb_div_qr.c
+gmp/mpn/sb_divappr_q.c
+gmp/mpn/sb_divrem_mn.c
+gmp/mpn/scan0.c
+gmp/mpn/scan1.c
+gmp/mpn/set_str.c
+gmp/mpn/sqr_basecase.asm
+gmp/mpn/sqrtrem.c
+gmp/mpn/sub.c
+gmp/mpn/sub_1.c
+gmp/mpn/sub_n.asm
+gmp/mpn/subcnd_n.c
+gmp/mpn/submul_1.asm
+gmp/mpn/tdiv_qr.c
+gmp/mpn/toom22_mul.c
+gmp/mpn/toom2_sqr.c
+gmp/mpn/toom32_mul.c
+gmp/mpn/toom33_mul.c
+gmp/mpn/toom3_sqr.c
+gmp/mpn/toom42_mul.c
+gmp/mpn/toom44_mul.c
+gmp/mpn/toom4_sqr.c
+gmp/mpn/toom53_mul.c
+gmp/mpn/toom62_mul.c
+gmp/mpn/toom_interpolate_5pts.c
+gmp/mpn/toom_interpolate_7pts.c
+gmp/mpn/udiv.asm
+gmp/mpn/umul.asm
+gmp/mpq/.libs/
+gmp/mpz/.libs/
+gmp/mpz/fac_ui.h
+gmp/printf/.libs/
+gmp/scanf/.libs/
+gmp/tune/sqr_basecase.c
+onig/.deps/
+onig/.libs/
+onig/onig-config
+onig/sample/.deps/
+onig/sample/.libs/
+onig/sample/crnl
+onig/sample/encode
+onig/sample/listcap
+onig/sample/names
+onig/sample/posix
+onig/sample/simple
+onig/sample/sql
+onig/sample/syntax
+sigsegv/src/.libs/
+sigsegv/termbold
+sigsegv/termnorm
+sigsegv/tests/sigsegv1
+sigsegv/tests/sigsegv2
+sigsegv/tests/sigsegv3
+sigsegv/tests/stackoverflow1
+sigsegv/tests/stackoverflow2
+src/.deps/
+src/miniyog
+src/parser.out
+src/yog-bdw
+src/yog-copying
+src/yog-generational
+src/yog-mark-sweep
+src/yog-mark-sweep-compact
 stamp-h1
+tests/test_write0.tmp
+tools/lemon/.deps/
+tools/lemon/lemon
 vgcore.*
