--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -457,7 +457,7 @@ COMMON_SOURCES = arg.c \
 CFLAGS_COMMON = -I$(ROOT_DIR)/include -I$(ONIG_DIR) -I$(BDWGC_DIR)/include \
 		-I$(GMP_DIR) -Wall -DPREFIX=\"$(prefix)\"
 
-LDFLAGS_COMMON = $(ONIG_DIR)/.libs/libonig.a -ldl -export-dynamic \
+LDFLAGS_COMMON = $(ONIG_DIR)/.libs/libonig.a -ldl -lm -export-dynamic \
 		 $(GMP_DIR)/.libs/libgmp.a
 
 bin_PROGRAMS = @BIN_PROGRAMS@
