implement Array#include?
implement Array#join.

--HG--
extra : convert_revision : f67c9d1a4912c2d9ee3285c23e0b5384be34f9ed

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -36,6 +36,7 @@ COMMON_SOURCES = arg.c \
 	klass.c \
 	lexer.c \
 	main.c \
+	misc.c \
 	module.c \
 	nil.c \
 	object.c \
@@ -99,6 +100,10 @@ am:
 builtins.inc: miniyog builtins.yg yg2inc.yg
 	$(MAKE) miniyog
 	./miniyog yg2inc.yg builtins.yg $@
+
+array.inc: miniyog array.yg yg2inc.yg
+	$(MAKE) miniyog
+	./miniyog yg2inc.yg array.yg $@
 
 parser.h parser.c: parser.y parser.lt $(LEMON)
 	(cd $(LEMON_DIR); $(MAKE))
