rename 'klass' to 'class'. 'klass' is not popular.
rename YogXxx_klass_new to YogXxx_define_class.

--HG--
extra : convert_revision : 6fce55ed7a76008c31dcb79949431b11c253d672

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -17,6 +17,7 @@ COMMON_SOURCES = arg.c \
 	block.c \
 	bool.c \
 	builtins.c \
+	class.c \
 	classmethod.c \
 	code.c \
 	comparable.c \
@@ -33,7 +34,6 @@ COMMON_SOURCES = arg.c \
 	function.c \
 	gc.c \
 	inst.c \
-	klass.c \
 	lexer.c \
 	main.c \
 	misc.c \
