--- a/Makefile.in
+++ b/Makefile.in
@@ -5,6 +5,8 @@ prefix = @prefix@
 CONFIG_DISTCLEAN_FILES = config.status config.cache config.log \
 			 configure.lineno config.status.lineno
 
+.PHONY: all clean distclean maintainer-clean doc proto test test-bdw test-copying test-mark-sweep test-mark-sweep-compact test-generational update-version install-vim
+
 all:
 	@for subdir in $(DIRS); do \
 		(cd $${subdir}; $(MAKE)); \
@@ -36,6 +38,9 @@ maintainer-clean:
 	rm -f $(CONFIG_DISTCLEAN_FILES)
 	rm -rf autom4te.cache
 	rm -f Makefile
+
+doc:
+	(cd doc && make)
 
 proto:
 	python tools/update_prototype.py
