--- a/issues/project.yaml
+++ b/issues/project.yaml
@@ -4,4 +4,15 @@ version: "0.5"
 components: 
 - !ditz.rubyforge.org,2008-03-06/component 
   name: Yog
-releases: []
+- !ditz.rubyforge.org,2008-03-06/component 
+  name: document
+releases: 
+- !ditz.rubyforge.org,2008-03-06/release 
+  name: 0.0.1
+  status: :unreleased
+  release_time: 
+  log_events: 
+  - - 2009-09-02 18:01:23.079877 Z
+    - Sumi Tomohiko <SumiTomohiko@neko-daisuki.ddo.jp>
+    - created
+    - ""
