Changed doc/Makefile to generate HTMLs in doc/html directory.

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -32,11 +32,12 @@ help:
 distclean maintainer-clean clean:
 	-rm -rf _build/*
 	rm /tmp/sphinx-err-*.log
+	rm -rf html
 
 html:
-	$(SPHINXBUILD) -b html $(ALLSPHINXOPTS) _build/html
+	$(SPHINXBUILD) -b html $(ALLSPHINXOPTS) html
 	@echo
-	@echo "Build finished. The HTML pages are in _build/html."
+	@echo "Build finished. The HTML pages are in html."
 
 dirhtml:
 	$(SPHINXBUILD) -b dirhtml $(ALLSPHINXOPTS) _build/dirhtml
