--- a/issues/project.yaml
+++ b/issues/project.yaml
@@ -9,10 +9,14 @@ components:
 releases: 
 - !ditz.rubyforge.org,2008-03-06/release 
   name: 0.0.1
-  status: :unreleased
-  release_time: 
+  status: :released
+  release_time: 2009-09-10 08:25:58.934469 Z
   log_events: 
   - - 2009-09-02 18:01:23.079877 Z
     - Sumi Tomohiko <SumiTomohiko@neko-daisuki.ddo.jp>
     - created
+    - ""
+  - - 2009-09-10 08:25:58.934495 Z
+    - Sumi Tomohiko <SumiTomohiko@neko-daisuki.ddo.jp>
+    - released
     - ""
