--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -320,6 +320,7 @@ ECHO_N = @ECHO_N@
 ECHO_T = @ECHO_T@
 EGREP = @EGREP@
 EXEEXT = @EXEEXT@
+EXTS = @EXTS@
 F77 = @F77@
 FFLAGS = @FFLAGS@
 GREP = @GREP@
@@ -352,6 +353,7 @@ PTHREADS_W32_DIR = @PTHREADS_W32_DIR@
 RANLIB = @RANLIB@
 SET_MAKE = @SET_MAKE@
 SHELL = @SHELL@
+SOEXT = @SOEXT@
 STRIP = @STRIP@
 TEST_TARGETS = @TEST_TARGETS@
 VERSION = @VERSION@
@@ -464,8 +466,8 @@ CFLAGS_COMMON = -I$(ROOT_DIR)/include -I$(ONIG_DIR) -I$(BDWGC_DIR)/include \
 		-I$(GMP_DIR) -Wall -DPREFIX=\"$(prefix)\"
 
 EXTRA_PROGRAMS = yog-bdw$(EXEEXT) yog-copying$(EXEEXT) yog-mark-sweep$(EXEEXT) \
-		 yog-mark-sweep-compact$(EXEEXT) \
-		 yog-generational$(EXEEXT) miniyog$(EXEEXT)
+		 yog-mark-sweep-compact$(EXEEXT) yog-generational$(EXEEXT) \
+		 miniyog$(EXEEXT)
 
 bin_PROGRAMS = @BIN_PROGRAMS@
 yog_copying_SOURCES = $(COMMON_SOURCES) gc/copying.c
@@ -4829,6 +4831,9 @@ code.inc: code.inc.tmpl $(INSTS_DEF) $(INST_PY)
 	$(INST_CMD)
 
 compile.inc: compile.inc.tmpl $(INSTS_DEF) $(INST_PY)
+	$(INST_CMD)
+
+inst.c: inst.c.tmpl $(INSTS_DEF) $(INST_PY)
 	$(INST_CMD)
 
 $(ROOT_DIR)/include/yog/inst.h: $(ROOT_DIR)/include/yog/inst.h.tmpl $(INSTS_DEF) $(INST_PY)
