--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -320,6 +320,7 @@ ECHO_N = @ECHO_N@
 ECHO_T = @ECHO_T@
 EGREP = @EGREP@
 EXEEXT = @EXEEXT@
+EXTS = @EXTS@
 F77 = @F77@
 FFLAGS = @FFLAGS@
 GREP = @GREP@
@@ -352,6 +353,7 @@ PTHREADS_W32_DIR = @PTHREADS_W32_DIR@
 RANLIB = @RANLIB@
 SET_MAKE = @SET_MAKE@
 SHELL = @SHELL@
+SOEXT = @SOEXT@
 STRIP = @STRIP@
 TEST_TARGETS = @TEST_TARGETS@
 VERSION = @VERSION@
@@ -412,6 +414,7 @@ ROOT_DIR = ..
 ONIG_DIR = $(ROOT_DIR)/onig
 BDWGC_DIR = $(ROOT_DIR)/bdwgc
 GMP_DIR = $(ROOT_DIR)/gmp
+PYTHON = python2.6
 LEMON_DIR = $(ROOT_DIR)/tools/lemon
 LEMON = $(LEMON_DIR)/lemon
 YACC = $(LEMON)
@@ -464,8 +467,8 @@ CFLAGS_COMMON = -I$(ROOT_DIR)/include -I$(ONIG_DIR) -I$(BDWGC_DIR)/include \
 		-I$(GMP_DIR) -Wall -DPREFIX=\"$(prefix)\"
 
 EXTRA_PROGRAMS = yog-bdw$(EXEEXT) yog-copying$(EXEEXT) yog-mark-sweep$(EXEEXT) \
-		 yog-mark-sweep-compact$(EXEEXT) \
-		 yog-generational$(EXEEXT) miniyog$(EXEEXT)
+		 yog-mark-sweep-compact$(EXEEXT) yog-generational$(EXEEXT) \
+		 miniyog$(EXEEXT)
 
 bin_PROGRAMS = @BIN_PROGRAMS@
 yog_copying_SOURCES = $(COMMON_SOURCES) gc/copying.c
@@ -491,7 +494,7 @@ miniyog_LDFLAGS = $(yog_copying_LDFLAGS)
 INSTS_DEF = insts.def
 INST_PY = $(ROOT_DIR)/tools/inst.py
 INST_CMD = make insts
-GEN_AM_CMD = python $(ROOT_DIR)/tools/update_automake.py .
+GEN_AM_CMD = $(PYTHON) $(ROOT_DIR)/tools/update_automake.py .
 TEST_CMD = py.test
 VERSION_H = $(ROOT_DIR)/include/yog/version.h
 VERSION_H_M4 = $(VERSION_H).m4
@@ -4788,7 +4791,7 @@ uninstall-am: uninstall-binPROGRAMS
 
 
 insts:
-	python $(ROOT_DIR)/tools/inst.py insts.def ..
+	$(PYTHON) $(ROOT_DIR)/tools/inst.py insts.def ..
 
 am:
 	$(GEN_AM_CMD)
@@ -4832,6 +4835,9 @@ compile.inc: compile.inc.tmpl $(INSTS_DEF) $(INST_PY)
 	$(INST_CMD)
 
 $(ROOT_DIR)/include/yog/inst.h: $(ROOT_DIR)/include/yog/inst.h.tmpl $(INSTS_DEF) $(INST_PY)
+	$(INST_CMD)
+
+inst.c: $(INSTS_DEF) $(INST_PY)
 	$(INST_CMD)
 
 update-version:
