--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 *.a
+*.core
 *.dll
 *.exe
 *.la
@@ -167,6 +168,8 @@ gmp/printf/.libs/
 gmp/scanf/.libs/
 gmp/tune/sqr_basecase.c
 html
+include/yog/inst.h
+include/yog/opcodes.h
 libtool
 onig/.deps/
 onig/.libs/
@@ -181,6 +184,7 @@ onig/sample/posix
 onig/sample/simple
 onig/sample/sql
 onig/sample/syntax
+parser.output
 pthreads-w32/libpthreadGC2.stamp
 sigsegv/src/.libs/
 sigsegv/termbold
@@ -191,9 +195,18 @@ sigsegv/tests/sigsegv3
 sigsegv/tests/stackoverflow1
 sigsegv/tests/stackoverflow2
 src/.deps/
+src/array.inc
+src/builtins.inc
+src/code.inc
+src/compile.inc
+src/dict.inc
+src/eval.inc
+src/inst.c
 src/miniyog
+src/object.inc
 src/parser.c
 src/parser.out
+src/string.inc
 src/yog
 src/yog-bdw
 src/yog-copying
