--- a/Makefile.in
+++ b/Makefile.in
@@ -4,6 +4,7 @@ PTHREADS_W32_DIR = @PTHREADS_W32_DIR@
 prefix = @prefix@
 VERSION = @PACKAGE_VERSION@
 ARCHIVE = Yog-$(VERSION)
+PYTHON = python2.6
 
 CONFIG_DISTCLEAN_FILES = config.status config.cache config.log \
 			 configure.lineno config.status.lineno
@@ -58,7 +59,7 @@ doc:
 	(cd doc && make)
 
 proto:
-	python tools/update_prototype.py
+	$(PYTHON) tools/update_prototype.py
 
 test test-installed test-copying test-mark-sweep test-mark-sweep-compact test-bdw test-generational:
 	cd tests && $(MAKE) $@
