--- a/tests/Makefile.in
+++ b/tests/Makefile.in
@@ -2,23 +2,18 @@
 prefix = @prefix@
 CC = @CC@
 SOEXT = @SOEXT@
-os = $(shell uname -o)
 
-ifeq ($(os), Msys)
-LIBS =
-else
 LIBS = test_package4$(SOEXT) test_package5$(SOEXT) test_package6$(SOEXT)
-endif
 LIBS_OPT = -shared -O2 -I../include -Wall
 
 test_package4$(SOEXT): test_package4.c Makefile
-	$(CC) -o $@ $(LIBS_OPT) $<
+	$(CC) -o $@ $(LIBS_OPT) test_package4.c
 
 test_package5$(SOEXT): test_package5.c Makefile
-	$(CC) -o $@ $(LIBS_OPT) $<
+	$(CC) -o $@ $(LIBS_OPT) test_package5.c
 
 test_package6$(SOEXT): test_package6.c Makefile
-	$(CC) -o $@ $(LIBS_OPT) $<
+	$(CC) -o $@ $(LIBS_OPT) test_package6.c
 
 TEST_CMD = py.test --showlocals
 TEST_TARGETS = @TEST_TARGETS@
