--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,8 @@ gmp/.libs/
 gmp/config.m4
 gmp/demos/calc/calc-config.h
 gmp/demos/pexpr-config.h
+gmp/doc/gmp.info-1
+gmp/doc/gmp.info-2
 gmp/fib_table.h
 gmp/gen-bases
 gmp/gen-fac_ui
