Fixed to use WinMain.

--- a/onig/win32/Makefile
+++ b/onig/win32/Makefile
@@ -3,7 +3,7 @@
 product_name = oniguruma
 
 CPPFLAGS = 
-CFLAGS = -O2 -nologo /W3 /MT
+CFLAGS = -O2 -nologo /W3 /MT /Zi
 LDFLAGS =
 LOADLIBES =
 ARLIB = lib
