--- a/vs/2003/pthreads-w32/Makefile
+++ b/vs/2003/pthreads-w32/Makefile
@@ -3,7 +3,7 @@ DIR = ..\..\..\pthreads-w32
 
 all:
 	cd $(DIR)
-	$(MAKE) /$(MAKEFLAGS) /NOLOGO VC-static
+	$(MAKE) /$(MAKEFLAGS) /NOLOGO VC-static-debug
 
 clean:
 	cd $(DIR)
