Fixed to add SUBSYSTEM/CONSOLE for miniyog.exe.

--- a/vs/2003/Yog/Makefile
+++ b/vs/2003/Yog/Makefile
@@ -13,7 +13,7 @@ MINIYOG_CFLAGS = $(COMMON_CFLAGS) /DMINIYOG /DGC_COPYING
 YOG_CFLAGS = $(COMMON_CFLAGS) /DGC_COPYING
 
 LINK = link.exe
-LDFLAGS = $(LDFLAGS) /DEBUG /NOLOGO /SUBSYSTEM:WINDOWS /INCREMENTAL:no
+LDFLAGS = $(LDFLAGS) /DEBUG /NOLOGO /SUBSYSTEM:CONSOLE /INCREMENTAL:no
 LIBS = ..\gmp\gmp.lib $(ROOT_DIR)\onig\onig_s.lib \
        $(ROOT_DIR)\pthreads-w32\pthreadVC2d.lib ws2_32.lib
 
