Fixed Makefile to make yog.exe.

--- a/.gitignore
+++ b/.gitignore
@@ -2,16 +2,20 @@
 *.core
 *.dll
 *.exe
+*.exp
 *.la
 *.lib
 *.lo
 *.log
+*.ncb
 *.o
 *.obj
 *.pdb
 *.pyc
 *.res
+*.RES
 *.so
+*.suo
 *.tar
 *.tar.bz2
 *.tar.gz
