--- a/vs/2003/Yog/Makefile
+++ b/vs/2003/Yog/Makefile
@@ -6,9 +6,10 @@ LEMON_DIR = $(ROOT_DIR)\tools\lemon
 MINIYOG = miniyog.exe
 YOG = yog.exe
 
-COMMON_CFLAGS = $(CFLAGS) /c /I. /I$(ROOT_DIR)\include /I$(ROOT_DIR)\src /MT\
+COMMON_CFLAGS = $(CFLAGS) /c /I. /I$(ROOT_DIR)\include /I$(ROOT_DIR)\src \
 		/I$(ROOT_DIR)\onig /I..\gmp /I$(ROOT_DIR)\pthreads-w32 /nologo \
-		/O2 /QI0f /Wall /Z7 /TP /DPTW32_STATIC_LIB /DONIG_EXTERN=extern
+		/O2 /QI0f /Wall /Z7 /TP /DPTW32_STATIC_LIB \
+		/DONIG_EXTERN=extern /MT
 MINIYOG_CFLAGS = $(COMMON_CFLAGS) /DMINIYOG /DGC_COPYING
 YOG_CFLAGS = $(COMMON_CFLAGS) /DGC_COPYING
 
@@ -40,7 +41,8 @@ YOG_OBJS = $(SRC_DIR)\yog-arg.obj $(SRC_DIR)\yog-array.obj \
 	   $(SRC_DIR)\yog-stacktrace.obj $(SRC_DIR)\yog-string.obj \
 	   $(SRC_DIR)\yog-symbol.obj $(SRC_DIR)\yog-table.obj \
 	   $(SRC_DIR)\yog-thread.obj $(SRC_DIR)\yog-value.obj \
-	   $(SRC_DIR)\yog-vm.obj $(SRC_DIR)\gc\yog-copying.obj icon.RES
+	   $(SRC_DIR)\yog-vm.obj $(SRC_DIR)\gc\yog-copying.obj icon.RES \
+	   yog-getopt.obj
 
 MINIYOG_OBJS = $(SRC_DIR)\miniyog-arg.obj $(SRC_DIR)\miniyog-array.obj \
 	       $(SRC_DIR)\miniyog-bignum.obj $(SRC_DIR)\miniyog-binary.obj \
@@ -64,7 +66,7 @@ MINIYOG_OBJS = $(SRC_DIR)\miniyog-arg.obj $(SRC_DIR)\miniyog-array.obj \
 	       $(SRC_DIR)\miniyog-string.obj $(SRC_DIR)\miniyog-symbol.obj \
 	       $(SRC_DIR)\miniyog-table.obj $(SRC_DIR)\miniyog-thread.obj \
 	       $(SRC_DIR)\miniyog-value.obj $(SRC_DIR)\miniyog-vm.obj \
-	       $(SRC_DIR)\gc\miniyog-copying.obj icon.RES
+	       $(SRC_DIR)\gc\miniyog-copying.obj icon.RES miniyog-getopt.obj
 
 all: $(YOG)
 
@@ -223,6 +225,9 @@ $(SRC_DIR)\yog-vm.obj: $(SRC_DIR)\vm.c
 $(SRC_DIR)\gc\yog-copying.obj: $(SRC_DIR)\gc\copying.c
 	$(CC) $(YOG_CFLAGS) /Fo$@ $?
 
+yog-getopt.obj: getopt.c
+	$(CC) $(YOG_CFLAGS) /Fo$@ $?
+
 $(MINIYOG): $(MINIYOG_OBJS)
 	$(LINK) $(LDFLAGS) /OUT:$@ $(LIBS) $(MINIYOG_OBJS)
 
@@ -369,6 +374,9 @@ $(SRC_DIR)\miniyog-vm.obj: $(SRC_DIR)\vm.c
 
 $(SRC_DIR)\gc\miniyog-copying.obj: $(SRC_DIR)\gc\copying.c
 	$(CC) $(MINIYOG_CFLAGS) /Fo$@ $?
+
+miniyog-getopt.obj: getopt.c
+	$(CC) $(YOG_CFLAGS) /Fo$@ $?
 
 icon.RES: icon.rc
 	rc $?
