--- a/Makefile.in
+++ b/Makefile.in
@@ -28,7 +28,7 @@ clean:
 	@for subdir in $(DIRS) tests doc; do \
 		(cd $${subdir} && $(MAKE) clean); \
 	done
-	find tests -name "*.pyc" -print0 | xargs --null rm -f
+	find tests -name "*.pyc" -print0 | xargs -0 rm -f
 	rm -f core*
 
 distclean:
@@ -38,7 +38,7 @@ distclean:
 	@for subdir in $(DIRS) tests doc; do \
 		(cd $${subdir} && $(MAKE) distclean); \
 	done
-	find tests -name "*.pyc" -print0 | xargs --null rm -f
+	find tests -name "*.pyc" -print0 | xargs -0 rm -f
 	rm -f core*
 	rm -f $(CONFIG_DISTCLEAN_FILES)
 	rm -f Makefile
@@ -50,7 +50,7 @@ maintainer-clean:
 	@for subdir in $(DIRS) tests doc; do \
 		(cd $${subdir}; $(MAKE) maintainer-clean); \
 	done
-	find tests -name "*.pyc" -print0 | xargs --null rm -f
+	find tests -name "*.pyc" -print0 | xargs -0 rm -f
 	rm -f core*
 	rm -f $(CONFIG_DISTCLEAN_FILES)
 	rm -rf autom4te.cache
